feat : fonction de calcul pour la valeur moyenne

--- a/Programmes/Main.ipynb
+++ b/Programmes/Main.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "de488e88",
    "metadata": {},
    "outputs": [],
@@ -2622,11 +2622,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "40a29fbe",
    "metadata": {},
    "outputs": [],
    "source": [
+    "def longueur(vecteur):\n",
+    "    somme_x2 = 0\n",
+    "    for x in vecteur:\n",
+    "        somme_x2 += x**2\n",
+    "    return np.sqrt(somme_x2)\n",
+    "\n",
     "# Calcul des vecteurs des harmoniques\n",
     "def harmonique(signal, H) : \n",
     "    signal_dict = np.load(signal) \n",
@@ -2634,7 +2640,7 @@
     "    t = signal_dict['t']\n",
     "\n",
     "    nu,g = san.trans_fourier(s, t)\n",
-    "    spectre = abs(g)**2\n",
+    "    spectre = abs(g)\n",
     "    spectre_normal = spectre / max(spectre)\n",
     "\n",
     "    fondamental = san.detect_fondamentale(spectre_normal, nu)\n",
@@ -2649,14 +2655,14 @@
     "    for i in range(H) : \n",
     "        amplitude = harmonique_amp[i]\n",
     "        amplitude = abs(amplitude) + 1e-12 # éviter log(0)\n",
-    "        vecteur_harm.append((float(np.log10(amplitude))))\n",
+    "        vecteur_harm.append(np.log10(amplitude))\n",
     "\n",
     "    # print(\"Vecteur harmonique (log10 amplitudes) :\", vecteur_harm - np.max(vecteur_harm))\n",
     "\n",
     "    # fig_temporel = px.line(x = t, y = s, title = \"Signal Temporel\").show()\n",
     "    # fig_fourier = px.line(x = nu, y = spectre, title = \"Spectre de Fourier\").show()\n",
     "\n",
-    "    return vecteur_harm - np.max(vecteur_harm)\n"
+    "    return vecteur_harm/longueur(vecteur_harm)\n"
    ]
   },
   {
@@ -2664,46 +2670,60 @@
    "execution_count": null,
    "id": "0f0a885f",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "H = 15\n",
+    "ref = dict()\n",
+    "\n",
+    "# Calcul du vecteur valeur moyenne\n",
+    "def valeur_moyenne(vecteurs):\n",
+    "    vecteur_valm = list()\n",
+    "    for y in range(len(vecteurs[0])):\n",
+    "        somme = 0\n",
+    "        for x in range(len(vecteurs)):\n",
+    "            somme += vecteurs[x][y]\n",
+    "        vecteur_valm.append(somme/len(vecteurs))\n",
+    "    return vecteur_valm/longueur(vecteur_valm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26493eb3",
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vecteur valeur moyenne :  [np.float64(-0.030656909942626952), np.float64(-0.25315380096435547), np.float64(-1.4186079025268554), np.float64(-1.0057971000671386), np.float64(-1.1615482807159423), np.float64(-0.638594388961792), np.float64(-0.968445110321045), np.float64(-1.1158551692962646), np.float64(-1.444600248336792), np.float64(-1.7675396919250488), np.float64(-1.2242310523986817), np.float64(-2.1886462688446047), np.float64(-3.021680474281311), np.float64(-3.584411096572876), np.float64(-4.040022450685501)]\n",
-      "\n",
-      "Vecteur valeur moyenne :  [np.float64(-0.1615436553955078), np.float64(-0.16383161544799804), np.float64(-1.0608501434326172), np.float64(-0.5092604637145997), np.float64(-2.0334725856781004), np.float64(-2.658352851867676), np.float64(-2.8154944896698), np.float64(-2.8872039318084717), np.float64(-3.389010429382324), np.float64(-2.9735450744628906), np.float64(-2.9919804334640503), np.float64(-3.6477012634277344), np.float64(-4.198929381370545), np.float64(-4.015209114551544), np.float64(-4.424510288238525)]\n",
-      "\n",
-      "Vecteur valeur moyenne :  [np.float64(-0.07343826293945313), np.float64(-0.3050323486328125), np.float64(-2.230615425109863), np.float64(-3.689396548271179), np.float64(-4.741367149353027), np.float64(-4.832494723796844), np.float64(-5.295080947875976), np.float64(-5.865049529448152), np.float64(-6.002657955884933), np.float64(-6.338322967290878), np.float64(-6.190225118398667), np.float64(-6.1835309088230135), np.float64(-6.099426579475403), np.float64(-5.759540978074074), np.float64(-5.189939832687378)]\n",
-      "\n",
-      "Vecteur valeur moyenne :  [np.float64(-0.4762143135070801), np.float64(-0.10861082077026367), np.float64(-0.1755295753479004), np.float64(-1.295284366607666), np.float64(-2.5971514225006103), np.float64(-2.4984543800354), np.float64(-3.907094216346741), np.float64(-4.741066360473633), np.float64(-5.247154867649078), np.float64(-5.509602460265159), np.float64(-5.650236690044403), np.float64(-5.86370510160923), np.float64(-5.910166275501251), np.float64(-6.011500345170498), np.float64(-6.019595283083618)]\n",
-      "\n",
-      "Vecteur valeur moyenne :  [np.float64(-0.006217288970947266), np.float64(-0.4024487495422363), np.float64(-2.3731946468353273), np.float64(-3.736551213264465), np.float64(-4.286846160888672), np.float64(-4.850573670864105), np.float64(-5.597037196159363), np.float64(-5.772620782256126), np.float64(-5.692611634731293), np.float64(-5.722939178347588), np.float64(-5.077269411087036), np.float64(-4.3513978004455565), np.float64(-4.585923540592193), np.float64(-4.668233698606491), np.float64(-5.044968104362487)]\n",
-      "\n"
+      "matrice des vecteurs de valeur moyenne par voyelle :  {'a': array([0.31244156, 0.3052003 , 0.2543214 , 0.26441926, 0.24279316,\n",
+      "       0.2755966 , 0.28303868, 0.28447965, 0.25819302, 0.25145483,\n",
+      "       0.2715089 , 0.25601897, 0.20973463, 0.18905796, 0.1726475 ],\n",
+      "      dtype=float32), 'e': array([0.41261747, 0.41270468, 0.34467283, 0.3867964 , 0.2754932 ,\n",
+      "       0.22687137, 0.21615303, 0.20992577, 0.17270139, 0.2020643 ,\n",
+      "       0.20201677, 0.15258723, 0.11312174, 0.12675051, 0.09613015],\n",
+      "      dtype=float32), 'i': array([ 0.61472845,  0.5906964 ,  0.3951989 ,  0.2465083 ,  0.14093885,\n",
+      "        0.1312345 ,  0.08408017,  0.02647805,  0.0124169 , -0.02148348,\n",
+      "       -0.00591838, -0.005185  ,  0.00371917,  0.03864812,  0.09589637],\n",
+      "      dtype=float32), 'o': array([0.44548228, 0.47465748, 0.46964654, 0.380659  , 0.27790627,\n",
+      "       0.2857535 , 0.17496555, 0.10864539, 0.06936035, 0.04853737,\n",
+      "       0.03764135, 0.02080917, 0.01722621, 0.00916335, 0.00869686],\n",
+      "      dtype=float32), 'u': array([0.5800499 , 0.5431247 , 0.36312488, 0.23815152, 0.18942167,\n",
+      "       0.13822149, 0.07039401, 0.05454809, 0.06196294, 0.05821178,\n",
+      "       0.11859402, 0.18278264, 0.15911378, 0.15345754, 0.11617646],\n",
+      "      dtype=float32)}\n"
      ]
     }
    ],
    "source": [
-    "H = 15\n",
-    "dico_valm = dict()\n",
-    "\n",
     "for voyelle in ('a', 'e', 'i', 'o', 'u'):\n",
     "    vecteurs_harm = list()\n",
     "    for n in range(1, 6):\n",
     "        vecteurs_harm.append(harmonique(f'../Sons/apprentissage/{voyelle}_{n}.npz', H))\n",
     "        # print(f\"Vecteurs des harmoniques du signal {voyelle}_{n} : \", vecteurs_harm[n-1])\n",
-    "\n",
-    "    # Calcul du vecteur valeur moyenne\n",
-    "    vecteur_valm = list()\n",
-    "    for y in range(len(vecteurs_harm[0])):\n",
-    "        somme = 0\n",
-    "        for x in range(len(vecteurs_harm)):\n",
-    "            somme += vecteurs_harm[x][y]\n",
-    "        vecteur_valm.append(somme/len(vecteurs_harm))\n",
-    "\n",
-    "    dico_valm[voyelle] = vecteur_valm\n",
-    "\n",
-    "    print('Vecteur valeur moyenne : ', vecteur_valm)\n",
-    "    print()"
+    "    ref[voyelle] = valeur_moyenne(vecteurs_harm)\n",
+    "    \n",
+    "print('matrice des vecteurs de valeur moyenne par voyelle : ', ref)"
    ]
   },
   {
@@ -2712,6 +2732,58 @@
    "metadata": {},
    "source": [
     "2.3 Test de la méthode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c54352f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "matrice des vecteurs de valeur moyenne par voyelle :  {'a': array([0.36788893, 0.35760307, 0.26178226, 0.2942606 , 0.26854858,\n",
+      "       0.31926164, 0.3006268 , 0.2768778 , 0.2271818 , 0.25231305,\n",
+      "       0.22841088, 0.20058998, 0.14646249, 0.09051916, 0.05699239],\n",
+      "      dtype=float32), 'e': array([0.364841  , 0.38293296, 0.34421828, 0.40672368, 0.24606022,\n",
+      "       0.25542247, 0.20888825, 0.20070265, 0.18272175, 0.1978896 ,\n",
+      "       0.24306712, 0.21040766, 0.16229102, 0.13184166, 0.08378439],\n",
+      "      dtype=float32), 'i': array([0.67375433, 0.5723648 , 0.3079287 , 0.19683966, 0.18778783,\n",
+      "       0.11234993, 0.10732758, 0.0652652 , 0.03542926, 0.0294499 ,\n",
+      "       0.02797668, 0.04178467, 0.07854272, 0.08163472, 0.06113683],\n",
+      "      dtype=float32), 'o': array([ 0.44456387,  0.45553634,  0.44014275,  0.3856942 ,  0.32415214,\n",
+      "        0.3060978 ,  0.20087789,  0.09784206,  0.04744557, -0.00243031,\n",
+      "        0.01555299, -0.03014651, -0.01357347, -0.00823977, -0.00292423],\n",
+      "      dtype=float32), 'u': array([0.5681845 , 0.48402396, 0.32839063, 0.15061092, 0.1907203 ,\n",
+      "       0.18321688, 0.14427888, 0.12555651, 0.1254907 , 0.10619185,\n",
+      "       0.20369501, 0.20566362, 0.17912094, 0.18710077, 0.16713719],\n",
+      "      dtype=float32)}\n"
+     ]
+    }
+   ],
+   "source": [
+    "vecteurs_test = dict()\n",
+    "for voyelle in ('a', 'e', 'i', 'o', 'u'):\n",
+    "    vecteurs_harm2 = list()\n",
+    "    for n in range(6, 8):\n",
+    "        vecteurs_harm2.append(harmonique(f'../Sons/test/{voyelle}_{n}.npz', H))\n",
+    "        # print(f\"Vecteurs des harmoniques du signal {voyelle}_{n} : \", vecteurs_harm[n-1])\n",
+    "    vecteurs_test[voyelle] = valeur_moyenne(vecteurs_harm2)\n",
+    "    \n",
+    "print('matrice des vecteurs de valeur moyenne par voyelle : ', vecteurs_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6b6dfba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compare(voyelle, vecteur):\n",
+    "    minimum = "
    ]
   }
  ],
