feat : test & essai du signal 6

--- a/Programmes/Main.ipynb
+++ b/Programmes/Main.ipynb
@@ -2667,7 +2667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "id": "0f0a885f",
    "metadata": {},
    "outputs": [],
@@ -2688,7 +2688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "26493eb3",
    "metadata": {},
    "outputs": [
@@ -2736,7 +2736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "id": "c54352f2",
    "metadata": {},
    "outputs": [
@@ -2777,13 +2777,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "id": "e6b6dfba",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "e\n",
+      "i\n",
+      "o\n",
+      "u\n"
+     ]
+    }
+   ],
    "source": [
-    "def compare(voyelle, vecteur):\n",
-    "    minimum = "
+    "def compare(vecteur):\n",
+    "    minimum = ('a', np.abs(vecteur-ref['a']))\n",
+    "    for voyelle in ('e', 'i', 'o', 'u'):\n",
+    "        if longueur(minimum[1]) > longueur(np.abs(vecteur-ref[voyelle])):\n",
+    "            minimum = (voyelle, np.abs(vecteur-ref[voyelle]))\n",
+    "    return minimum[0]\n",
+    "\n",
+    "for voyelle in ('a', 'e', 'i', 'o', 'u'):\n",
+    "    print(compare(vecteurs_test[voyelle]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "31ea028e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "o\n"
+     ]
+    }
+   ],
+   "source": [
+    "vecteur_signal_6 = valeur_moyenne([harmonique(f'../Sons/etude/signal_6.npz', H)])\n",
+    "print(compare(vecteur_signal_6))"
    ]
   }
  ],
