--- a/Programmes/Main.ipynb
+++ b/Programmes/Main.ipynb
@@ -2783,7 +2783,9 @@
    "cell_type": "markdown",
    "id": "6e9057e1",
    "metadata": {},
-   "source": []
+   "source": [
+    "2.4 Application au cas d’étude    "
+   ]
   },
   {
    "cell_type": "code",
