fix : taille de l'affichage de la moyenne des harmoniques

--- a/Programmes/Main.ipynb
+++ b/Programmes/Main.ipynb
@@ -2714,7 +2714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 203,
    "id": "92f1cbcb",
    "metadata": {},
    "outputs": [
@@ -3642,6 +3642,7 @@
         "title": {
          "text": "Moyenne des harmoniques pour chaque voyelle"
         },
+        "width": 900,
         "xaxis": {
          "anchor": "y",
          "domain": [
@@ -3679,7 +3680,8 @@
     "\n",
     "moyenne_harmoniques = px.line(x=[i for i in range(1, H+2)], y=[ref['a'], ref['e'], ref['i'], ref['o'], ref['u']], \n",
     "                              labels={'x': 'harmoniques', 'value': 'Amplitude Moyenne (log)', 'variable': 'Légende'},\n",
-    "                              title='Moyenne des harmoniques pour chaque voyelle')\n",
+    "                              title='Moyenne des harmoniques pour chaque voyelle',\n",
+    "                              width=900)\n",
     "\n",
     "for i, trace in enumerate(moyenne_harmoniques.data):\n",
     "    trace.name = f\"'{liste_voyelles[i]}'\"\n",
