fix : commentaire de la conclusion

--- a/Programmes/Main.ipynb
+++ b/Programmes/Main.ipynb
@@ -3814,9 +3814,7 @@
    "id": "b1d8dc79",
    "metadata": {},
    "source": [
-    "On constate en effet que la distance euclidienne minimum entre notre signal d'étude et les différents vecteurs de voyelles de références correspond à la distance  \n",
-    "entre vecteur du signal 6 et le vecteur de la voyelle 'o'.  \n",
-    "Ainsi on peut en déduire que les caractéristiques les plus proches de notre signal sont les caractériques du vecteurs de la valeur moyenne de 'o'"
+    "Parmi toutes les voyelles, c’est pour « o » que la distance au signal_6 est la plus petite ; le signal est donc classé comme un « o ».​ Ils se partagent donc des caractérisques relativement similaire (plus qu'avec les autres signaux)"
    ]
   }
  ],
