--- a/Programmes/Main.ipynb
+++ b/Programmes/Main.ipynb
@@ -2634,11 +2634,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": null,
    "id": "16143f50",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Calcul du nombre d'harmonique utile de chaque signal\n",
     "def find_H(signal):    \n",
     "    signal_dict = np.load(signal) \n",
     "    s = signal_dict['s']\n",
